Fixed: use presentation CSS class for right aligning the price.

--- a/src/assets/scss/components/_body_sugaring.scss
+++ b/src/assets/scss/components/_body_sugaring.scss
@@ -5,10 +5,5 @@
     tr.last td {
       padding-bottom: 0.625rem;
     }
-    td.preis {
-      text-align: right;
-    }
   }
-
-  @include breakpoint(520px down) {}
 }
